--- a/src/components/utilitified_decorations/Logo.astro
+++ b/src/components/utilitified_decorations/Logo.astro
@@ -11,7 +11,7 @@ const { className, imgClassName } = Astro.props;
 
 <Link
   id="logo"
-  href="/"
+  uri="/"
   className={" flex flex-start h-14 items-center " + (className || "")}
 >
   <div
