--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -16,14 +16,14 @@ import InfoPanel from "@/components/panel/InfoPanel";
   >
     <div class="text-center space-y-6 mt-14">
       <Link
-        href="/login/callback"
+        uri="/login/callback"
         className="inline-flex items-center bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded transition-colors"
         >Sign in with GitHub</Link
       >
       <p class="text-sm text-gray-500 mt-4 -mb-4">
         By signing in, you agree to our{" "}
         <Link
-          href="/meta/policy"
+          uri="/meta/policy"
           className="text-blue-600 hover:text-blue-800"
           asNewTab={true}
         >
@@ -47,7 +47,7 @@ import InfoPanel from "@/components/panel/InfoPanel";
     <p>
       Obtain Voting Power, upvote the
       <Link
-        href="/data/issue"
+        uri="/data/issue"
         className="text-blue-600 hover:text-blue-800 underline"
         >"multi-auth" issue</Link
       > and get rating.
