--- a/src/pages/login/getting-started.astro
+++ b/src/pages/login/getting-started.astro
@@ -2,19 +2,13 @@
 import Layout from "@/layouts/PanelViewLayout.astro";
 import { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
 import PageLikePanel from "@/components/panel/PageLikePanel";
-import { getIcon } from "@/components/icon";
+import { getIcon, IconType } from "@/components/icon";
 import type { RoleCardProps } from "@/components/profile/panel/RolePanel";
-import { BgType } from "@/types/eventTypes";
 import RowGrid from "@/components/grid/RowGrid";
 import RolePanel from "@/components/profile/panel/RolePanel";
 import InfoPanel from "@/components/panel/InfoPanel";
 import Link from "@/components/custom-ui/Link";
 import ReactComponentImporter from "@/components/ReactComponentImporter";
-
-const bg = {
-  overlay: "rectangles",
-  sectionBgType: BgType.purpleToTealViaBlue,
-};
 
 const roles: RoleCardProps[] = [
   {
@@ -93,10 +87,10 @@ const roles: RoleCardProps[] = [
             <li class="flex items-start">
               <div class="w-4 h-4 mt-1.5 -ml-2 mr-1">
                 <ReactComponentImporter
-                  element={getIcon(role.icon || "info")}
+                  element={getIcon((role.icon as IconType) || "info")}
                 />
               </div>
-              <Link className="pt-0" href={role.helpLinkHref!}>
+              <Link className="pt-0" uri={role.helpLinkHref!}>
                 {role.helpLinkLabel}
               </Link>
             </li>
