Add dark theme for the pages except quest panel

--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -13,7 +13,7 @@ import { BgType } from "@/types/eventTypes";
 import Section from "@/layouts/sections/BaseSection.astro";
 import Badge from "@/components/badge/Badge";
 import HorizontalSection from "@/layouts/sections/HorizontalPanelsSection.astro";
-import BasePanel from "@/components/panel/BasePanel";
+import BasePanel from "@/components/panel/Panel";
 import { getIcon } from "@/components/icon";
 
 const contributorChalllengesSection = {
