--- a/src/pages/meta/influencer.astro
+++ b/src/pages/meta/influencer.astro
@@ -7,7 +7,7 @@ import { BgType, type SectionProps } from "@/types/eventTypes";
 import Section from "@/layouts/sections/BaseSection.astro";
 import HorizontalPanels from "@/layouts/sections/HorizontalPanelsSection.astro";
 import HorizontalSection from "@/layouts/sections/HorizontalPanelsSection.astro";
-import BasePanel from "@/components/panel/BasePanel";
+import BasePanel from "@/components/panel/Panel";
 import { getIcon } from "@/components/icon";
 
 const heroSection = {
