Update the landing navbar for newsletters page only

--- a/src/components/utilitified_decorations/LandingNavbar.astro
+++ b/src/components/utilitified_decorations/LandingNavbar.astro
@@ -41,7 +41,7 @@ const isItemShown = (itemName: ItemName): boolean => {
         }
         client:load
       >
-        <Link href="/meta/contributor">Contributors</Link>
+        <Link uri="/meta/contributor">Contributors</Link>
       </Tooltip>
     )
   }
@@ -54,7 +54,7 @@ const isItemShown = (itemName: ItemName): boolean => {
         client:load
       >
         <div class="flex items-center w-full">
-          <Link href="/meta/influencer">"Maybe" a donator?</Link>
+          <Link uri="/meta/influencer">"Maybe" a donator?</Link>
         </div>
       </Tooltip>
     )
@@ -62,11 +62,11 @@ const isItemShown = (itemName: ItemName): boolean => {
 
   {
     isItemShown(ItemName.HowItWork) && (
-      <Link href="/meta/work">How it works?</Link>
+      <Link uri="/meta/work">How it works?</Link>
     )
   }
 
-  {
+  <!-- {
     isItemShown(ItemName.Check) && (
       <Tooltip
         content={
@@ -75,9 +75,9 @@ const isItemShown = (itemName: ItemName): boolean => {
         client:load
       >
         <div class="flex items-center w-full">
-          <Link href="/maintainer/check">Check Balance</Link>
+          <Link uri="/maintainer/check">Check Balance</Link>
         </div>
       </Tooltip>
     )
-  }
+  } -->
 </nav>
