--- a/src/components/utilitified_decorations/LandingHeader.astro
+++ b/src/components/utilitified_decorations/LandingHeader.astro
@@ -17,10 +17,10 @@ const { subtitle, active, hideLinks } = Astro.props;
 ---
 
 <header
-  class={`h-14 -pt-2 bg-white shadow-sm border-b border-gray-200  fixed top-0 right-0 left-0 z-10`}
+  class={`h-14 -pt-2 bg-white dark:bg-gray-800 shadow-sm border-b border-gray-200 dark:border-gray-700  fixed top-0 right-0 left-0 z-10`}
 >
   <div
-    class={`navbar bg-base-100 shadow-sm ${GridStyle.section.padding!.x} h-14`}
+    class={`navbar bg-base-100 dark:bg-gray-800 shadow-sm ${GridStyle.section.padding!.x} h-14`}
   >
     <div class="navbar-start">
       <div class="dropdown">
@@ -58,8 +58,6 @@ const { subtitle, active, hideLinks } = Astro.props;
         ><slot />
       </LandingNavbar>
     </div>
-    <div class="navbar-end">
-      <AuthNavItem />
-    </div>
+    <div class="navbar-end"></div>
   </div>
 </header>
