--- a/src/layouts/sections/BaseSection.astro
+++ b/src/layouts/sections/BaseSection.astro
@@ -43,7 +43,7 @@ const sectionClassName =
     )
   }
   <div
-    class="relative inset-0 opacity-100 z-2 px-4 sm:px-6 lg:px-8 text-center"
+    class="relative inset-0 opacity-100 z-2 px-4 sm:px-6 lg:px-8 text-center text-slate-100 dark:text-slate-300"
   >
     {
       icon && (
@@ -57,19 +57,34 @@ const sectionClassName =
     {
       title && (
         <h1
-          class={`text-4xl md:text-5xl font-bold mb-6 ${titleClassName || ""}`}
+          class={`text-4xl md:text-5xl font-bold mb-6 text-slate-100 dark:text-slate-300 ${titleClassName || ""}`}
         >
           {title}
         </h1>
       )
     }
-    {subtitle && <p class="text-lg opacity-90 mb-6">{subtitle}</p>}
+    {
+      Array.isArray(subtitle) ? (
+        <p class="text-2xl md:text-3xl opacity-90 mb-6 mx-12 slate-150 dark:text-slate-350">
+          {subtitle.map((item) => (
+            <>
+              {item}
+              <br />
+            </>
+          ))}
+        </p>
+      ) : subtitle ? (
+        <p class="text-2xl md:text-3xl opacity-90 mb-6 mx-12 text-slate-150 dark:text-slate-350">
+          {subtitle}
+        </p>
+      ) : null
+    }
 
     <slot />
 
     {
       actions && (
-        <div class="flex flex-col sm:flex-row gap-4 justify-center">
+        <div class="flex flex-col sm:flex-row gap-8 mt-8 justify-center">
           {actions.map((action) =>
             action.replaceWithChildren ? (
               <DynamicReactImporter element={action.children} />
