--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { ClientRouter } from "astro:transitions";
 import "@/styles/motion.css";
+import Captcha from "@/components/captcha.astro";
 ---
 
 <!doctype html>
@@ -11,11 +12,13 @@ import "@/styles/motion.css";
     <link rel="icon" type="image/png" href="/cascadefund_logo.png" />
     <meta name="generator" content={Astro.generator} />
     <title>CascadeFund</title>
+
     <ClientRouter />
   </head>
   <body
     class="min-h-screen bg-neutral-50 dark:bg-gray-900 transition-colors duration-300"
   >
+    <Captcha client:load />
     <slot />
   </body>
 </html>
